# sql_evaluator

./: .env example  README.md  evul.py  examples.json  hi.py  pyproject.toml  test.py  test.txt  uncor_test.txt  тесты.xlsx
